--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
-
-<!-- Mirrored from slimhamdi.net/istanbul/demos/index-left-image-dark.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 01 Feb 2020 07:29:52 GMT -->
 <head>
     <meta charset="utf-8">
-    <title>Istanbul - Personal Portfolio</title>
+    <title>Priyam's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Template Google Fonts -->
